log
Tue, Apr 15, 2025 12:29:34 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:15: error: unused variable 'map' [-Werror=unused-variable]
     HashMap * map = (HashMap *)malloc(sizeof(HashMap));
               ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025 12:31:59 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bec3925
Tue, Apr 15, 2025 12:38:25 PM: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
094abad
Tue, Apr 15, 2025 12:42:30 PM: 
 hashmap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
e983ed3
Tue, Apr 15, 2025 12:44:15 PM: 
 hashmap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  5|4
total_score: 30/70
16754de
Tue, Apr 15, 2025 12:48:45 PM: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
cc3f02d
Tue, Apr 15, 2025 12:51:48 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
ae81252
